update readme and add long_description

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,9 @@
 [metadata]
 name = mac_notifier
-version = 0.0.0
+version = 0.0.3
 description = Display notifications, alerts and dialogs on mac from command line
+long_description = file: README.md
+long_description_content_type = text/markdown
 author = xirenhua
 author_email = xirenhua@outlook.com
 url = https://github.com/xirenhua/mac_notifier
